Logo no simulador financeiro

--- a/calculadora_diesel/calculadora_Giovana.html
+++ b/calculadora_diesel/calculadora_Giovana.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simule Aqui! | TechDiesel</title>
    
     </style>
 </head>
 <body>
 
-
+    <img src="logo_TechDiesel.png" alt="logo da nossa empresa, TechDiesel" width="90px">
     <h1>Simule Aqui!</h1> <br> 
     
     Qual é o porte da sua empresa?
