atualizando calculadora novamente

--- a/calculadora_diesel/calculadora_Giovana.html
+++ b/calculadora_diesel/calculadora_Giovana.html
@@ -91,7 +91,7 @@
 
         resultado.innerHTML += `Sua empresa está <b>perdendo</b> ${qntDesperdiçadaGrande.toLocaleString("pt-BR")} Litros de Diesel <br>
                                <h2> Você <b>perde</b> no Total: <b>R$${perdaFinanceiraGrande.toLocaleString("pt-BR")}</h2></b> <br>
-                                 <h2>Com a <b>nossa proposta</b>, você <b>deixaria de perder:</b> <b>R$${qntRecuperadaGrande.toLocaleString("pt-BR")}</h2></b> <br> <br>
+                                 <h2>Com a <b>nossa proposta</b>, você <R$$>deixaria de perder: R$${qntRecuperadaGrande.toLocaleString("pt-BR")}</h2></b> <br> <br>
 
                                 De acordo com um Estudo da IBM, a introdução de sistemas de monitoramento em tempo real resultou em reduções de até 60% de perdas de combustível devido à evaporação, transbordamento e outros fatores.
                                 <br>O acesso a dados em tempo real permite ajustes rápidos que evitam desperdícios e melhoram a eficiência geral.
@@ -106,7 +106,7 @@
     } else if (porte == 'Pequeno'){
         resultado.innerHTML += `Sua empresa está <b>perdendo</b> ${qntDesperdiçadaPequeno.toLocaleString("pt-BR")} Litros de Diesel <br>
                                 <h2>Você <b>perde</b> no Total: <b>R$${perdaFinanceiraPequeno.toLocaleString("pt-BR")}</h2></b> <br>
-                                <h2>Com a <b>nossa proposta</b>, você <b>deixaria de perder</b> <b>R$${qntRecuperadaPequeno.toLocaleString("pt-BR")}</h2></b> <br> <br>
+                                <h2>Com a <b>nossa proposta</b>, você <R$$>deixaria de perder R$${qntRecuperadaPequeno.toLocaleString("pt-BR")}</h2></b> <br> <br>
 
                                 De acordo com um Estudo da IBM, a introdução de sistemas de monitoramento em tempo real resultou em reduções de até 60% de perdas de combustível devido à evaporação, transbordamento e outros fatores.
                                 <br>O acesso a dados em tempo real permite ajustes rápidos que evitam desperdícios e melhoram a eficiência geral.
@@ -122,7 +122,7 @@
     } else {
         resultado.innerHTML += `Sua empresa está <b>perdendo</b> ${qntDesperdiçadaMedio.toLocaleString("pt-BR")} Litros de Diesel <br>
                                  <h2>Você <b>perde</b> no Total: <b>R$${perdaFinanceiraMedio.toLocaleString("pt-BR")} </h2></b> <br>
-                                 <h2>Com a <b>nossa proposta</b>, você <b>deixaria de perder</b> <b>R$${qntRecuperadaMedio.toLocaleString("pt-BR")} </h2></b> <br> <br>
+                                 <h2>Com a <b>nossa proposta</b>, você <R$$>deixaria de perder R$${qntRecuperadaMedio.toLocaleString("pt-BR")} </h2></b> <br> <br>
 
                                 De acordo com um Estudo da IBM, a introdução de sistemas de monitoramento em tempo real resultou em reduções de até 60% de perdas de combustível devido à evaporação, transbordamento e outros fatores.
                                 <br>O acesso a dados em tempo real permite ajustes rápidos que evitam desperdícios e melhoram a eficiência geral.
